# my_SAG

./: .dockerignore  .env.backup  .env.example  .gitignore  Dockerfile.api  Dockerfile.elasticsearch  README.md  README_en.md  alembic.ini  docker-compose.api.yml  docker-compose.dev.yml  docker-compose.https.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_test.bat
.config/uv/: uv.toml
certs/: .gitignore  README.md
migrations/: env.py
migrations/versions/: 7df0f866a9bb_increase_article_section_content_size.py  865837abd4b7_initial_migration.py  bf39de3abbbb_increase_source_chunk_content_size.py
nginx/: nginx-ssl.conf  nginx.conf
prompts/: agent.json  extract.yaml  extractor.json  load.yaml  researcher.json  search.yaml
sag/: __init__.py  exceptions.py
sag/api/: __init__.py  deps.py  main.py  middleware.py
sag/api/routers/: __init__.py  chat.py  documents.py  entity_types.py  model_configs.py  pipeline.py  sources.py  tasks.py
sag/api/schemas/: __init__.py  base.py  chat.py  common.py  document.py  entity.py  model_config.py  pipeline.py  source.py
sag/api/services/: __init__.py  document_service.py  entity_service.py  entity_stats_service.py  pipeline_service.py  source_service.py
sag/core/agent/: __init__.py  base.py  builder.py  extractor.py  researcher.py  summarizer.py
sag/core/ai/: __init__.py  base.py  embedding.py  factory.py  llm.py  models.py  sumy.py  tokensize.py
sag/core/config/: __init__.py  settings.py
sag/core/prompt/: __init__.py  manager.py
sag/core/storage/: __init__.py  elasticsearch.py  mysql.py  redis.py
sag/core/storage/documents/: __init__.py  entity_vector.py  event_vector.py  source_chunk.py
sag/core/storage/repositories/: __init__.py  base.py  entity_repository.py  event_repository.py  source_chunk_repository.py
sag/db/: __init__.py  base.py  models.py
sag/engine/: __init__.py  config.py  core.py  enums.py  models.py
sag/models/: __init__.py  article.py  base.py  conversation.py  entity.py  event.py  source.py  user.py
sag/modules/: __init__.py
sag/modules/extract/: __init__.py  config.py  extractor.py  parser.py  processor.py
sag/modules/load/: __init__.py  config.py  converter.py  loader.py  parser.py  processor.py  sentence_splitter.py
sag/modules/search/: README.md  __init__.py  config.py  enricher.py  expand.py  recall.py  searcher.py  tracker.py
sag/utils/: __init__.py  logger.py  text.py  time.py
scripts/: deploy.sh  download_nltk_data.py  init_database.py  init_elasticsearch.py  recreate_database.py  recreate_elasticsearch.py  reset_database.py  ssh-deploy.sh  start_all.sh  start_api.py  start_dev.sh
web/: .dockerignore  .env.production  .gitignore  Dockerfile  README.md  next.config.js  next.config.ts  package-lock.json  package.json  start-windows.bat  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/chat/: page.tsx
web/app/documents/: page.tsx
web/app/search/: page.tsx
web/app/settings/: page.tsx
web/app/sources/: page.tsx
web/app/tasks/: page.tsx
web/components/documents/: DocumentDetailDrawer.tsx  DocumentEditDialog.tsx  DocumentUploadDialog.tsx  EventDrawer.tsx  SectionDrawer.tsx
web/components/events/: EventCard.tsx
web/components/layout/: Footer.tsx  Navbar.tsx
web/components/search/: AIAnalysis.tsx  AISummary.tsx  CluesGraph.tsx  GraphStats.tsx  NodeDetail.tsx  StageFilter.tsx
web/components/settings/: AttributeFilter.tsx  DeleteConfirmDialog.tsx  EntityTypeCard.tsx  EntityTypeDialog.tsx  EntityTypeDialog.tsx.backup  ModelConfigCard.tsx  ModelConfigDeleteDialog.tsx  ModelConfigDialog.tsx  ModelConfigFilter.tsx  ModelTypeFilter.tsx  ScenarioFilter.tsx  ScopeTreeSelector.tsx
web/components/sources/: SourceCard.tsx  SourceDialog.tsx
web/components/tasks/: ClearTasksDialog.tsx
web/components/ui/: button.tsx  calendar.tsx  card.tsx  command.tsx  datetime-picker.tsx  drawer.tsx  dropdown-menu.tsx  popover.tsx  radio-group.tsx  select.tsx  sheet.tsx  slider.tsx  switch.tsx
web/hooks/: use-toast.ts
web/lib/: api-client.ts  clue-path-utils.ts  search-config.ts  search-history-storage.ts  search-params-storage.ts  theme.ts  use-animations.ts  utils.ts
web/store/: useSourceStore.ts
web/types/: index.ts  react-mentions.d.ts  search-response.ts
(+7 files in other folders)
